<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/dialog_about"
    tools:context="tw.edu.ncu.cc.course.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/version_label"
        android:id="@+id/version_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_label"
        android:id="@+id/github_label"
        android:layout_below="@+id/version"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contributors_label"
        android:id="@+id/contributors_label"
        android:layout_below="@+id/github"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:id="@+id/version"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_below="@+id/version_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github"
        android:id="@+id/github"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_below="@+id/github_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contributors"
        android:id="@+id/contributors"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_below="@+id/contributors_label"
        android:layout_alignStart="@+id/version"
        android:layout_alignParentEnd="true" />

</RelativeLayout>