<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="asia.tatsujin.whac_a_mole.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/home_background">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/home_button_size"
        android:contentDescription="@string/play"
        android:src="@drawable/fig_play"
        android:scaleType="fitStart"
        android:background="@null"
        android:id="@+id/button_play"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/home_button_size"
        android:contentDescription="@string/rank"
        android:src="@drawable/fig_rank"
        android:scaleType="fitEnd"
        android:background="@null"
        android:id="@+id/button_rank"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_centerVertical="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/home_button_size"
        android:contentDescription="@string/exit"
        android:src="@drawable/fig_exit"
        android:scaleType="fitStart"
        android:background="@null"
        android:id="@+id/button_exit"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="36dp"/>
</RelativeLayout>
